--- a/about/index.html
+++ b/about/index.html
@@ -206,7 +206,7 @@ Sustained focus and addition of latest technological changes in the market has h
             <div id="g1-preheader-bar" class="g1-meta">
                                 <nav id="g1-secondary-nav">
                     <a id="g1-secondary-nav-switch" href="#"></a>
-                    <ul id="g1-secondary-nav-menu" class=""><li id="menu-item-34" class="g1-menu-icon-mail-reply-all menu-item menu-item-type-custom menu-item-object-custom menu-item-34"><a>adityachem67@yahoo.co.in , info@adityameruchem.com</a></li>
+                    <ul id="g1-secondary-nav-menu" class=""><li id="menu-item-34" class="g1-menu-icon-mail-reply-all menu-item menu-item-type-custom menu-item-object-custom menu-item-34"><a href = "mailto:adityachem67@yahoo.co.in, info@adityameruchem.com?subject = Inquiry&body = Message">Write your enquiry</a></li>
 <li id="menu-item-35" class="g1-menu-icon-phone menu-item menu-item-type-custom menu-item-object-custom menu-item-35"><a href="http://+91-9825066582+91-9426219159/">Call Us:+91-98 2506 6582 : +91-94 2621 9159</a></li>
 </ul>                </nav>
                 
